--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 .DS_Store
 infinitely_scrollable_image_grid.xcodeproj/project.xcworkspace/xcuserdata/valeri.xcuserdatad/UserInterfaceState.xcuserstate
+*.xcbkptlist
